--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -17,5 +17,15 @@ spring:
     store-type: jdbc                   # JDBC 기반 세션 사용
     jdbc:
       initialize-schema: always        # DB에 없으면 테이블 생성
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+
 server:
   port: 8080
+
+file:
+  upload-dir: C:/church/uploads  # Windows 예시, 디렉토리 만들어 두세요
