--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -16,5 +16,10 @@ spring:
   session:
     store-type: jdbc
 
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
+
 file:
-  upload-dir: uploads
+  upload-dir: C:/church/uploads
