--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -1,9 +1,15 @@
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/churchdb
+#    username: postgres
+#    password: password
+#    driver-class-name: org.postgresql.Driver
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/churchdb
-    username: postgres
-    password: password
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
 
   jpa:
     hibernate:
