--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -1,15 +1,15 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/churchdb
-    username: postgres
-    password: password
-    driver-class-name: org.postgresql.Driver
-
 #spring:
 #  datasource:
-#    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#    username: ${DB_USER}
-#    password: ${DB_PASSWORD}
+#    url: jdbc:postgresql://localhost:5432/churchdb
+#    username: postgres
+#    password: password
+#    driver-class-name: org.postgresql.Driver
+
+spring:
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
 
   jpa:
     hibernate:
@@ -22,10 +22,16 @@ spring:
   session:
     store-type: jdbc
 
+  server:
+    port: ${PORT:8080}
+
   servlet:
     multipart:
       max-file-size: 20MB
       max-request-size: 20MB
 
+#file:
+#  upload-dir: C:/church/uploads
+
 file:
-  upload-dir: C:/church/uploads
+  upload-dir: /tmp/uploads
