--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -1,15 +1,9 @@
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/churchdb
-#    username: postgres
-#    password: password
-#    driver-class-name: org.postgresql.Driver
-
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
@@ -29,9 +23,6 @@ spring:
     multipart:
       max-file-size: 20MB
       max-request-size: 20MB
-
-#file:
-#  upload-dir: C:/church/uploads
 
 file:
   upload-dir: /tmp/uploads
