--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
 
   session:
     store-type: jdbc
+    jdbc:
+      initialize-schema: always  # 또는 embedded
 
   server:
     port: ${PORT:8080}
