--- a/backend/church/gradle.properties
+++ b/backend/church/gradle.properties
@@ -1,8 +1,11 @@
-# Gradle Daemon ?? ? ??? ?? (???? ??? ??)
-org.gradle.jvmargs=-Xmx1024m
+# Gradle ?? ? JVM ??? ?? (???? ??? ?? ??)
+org.gradle.jvmargs=-Xmx512m -Dfile.encoding=UTF-8
 
-# ?? ?? ??
+# Gradle ?? ?? (?? ?? ??)
 org.gradle.caching=true
 
-# Gradle ?? ??
+# ?? ?? ??
 org.gradle.parallel=true
+
+# Gradle ?? ?? ? ? (???? ???? ???)
+org.gradle.daemon=false
