--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,7 @@
-VITE_API_URL=https://churchattendance-production.up.railway.app/
+# VITE_API_URL=https://churchattendance-production.up.railway.app 배포용
+
+VITE_API_URL=http://localhost:8080
+
+
+
 
