application.yml edit

--- a/backend/church/src/main/resources/application.yml
+++ b/backend/church/src/main/resources/application.yml
@@ -27,6 +27,4 @@ spring:
       max-request-size: 20MB
 
 file:
-  upload-dir: C:/church/uploads # 로컬
-
-#  upload-dir: /tmp/uploads # Railway 배포
+  upload-dir: ${UPLOAD_DIR:C:/church/uploads}
