--- a/backend/church/src/main/resources/application-prod.yml
+++ b/backend/church/src/main/resources/application-prod.yml
@@ -1,5 +1,31 @@
 spring:
   profiles: prod
 
+  datasource:
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always  # 또는 embedded
+
+  server:
+    port: ${PORT:8080}
+
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
 file:
   upload-dir: /tmp/uploads
