--- a/backend/church/src/main/resources/application-prod.yml
+++ b/backend/church/src/main/resources/application-prod.yml
@@ -4,9 +4,9 @@ spring:
       on-profile: prod
 
   datasource:
-    url: ${JDBC_DATABASE_URL}
-    username: ${JDBC_DATABASE_USERNAME}
-    password: ${JDBC_DATABASE_PASSWORD}
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${POSTGRES_DB}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
