--- a/backend/church/src/main/resources/application-local.yml
+++ b/backend/church/src/main/resources/application-local.yml
@@ -1,5 +1,6 @@
 spring:
-  profiles: local
+  profiles:
+    active: local  # 기본 프로파일을 local로 설정
 
   datasource:
     url: jdbc:postgresql://localhost:5432/churchdb
